# dart-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dart_scraper/: __init__.py
src/dart_scraper/data_scraper/: __init__.py  data_scraper.py  data_scraper_impl.py
src/dart_scraper/html_fetcher/: __init__.py  html_fetcher.py  html_fetcher_impl.py  utils.py
src/dart_scraper/meta_scraper/: __init__.py  meta_scraper.py  meta_scraper_impl.py
tests/: test_data_scraper.py  test_data_scraper_2.py  test_failure_case.py  test_meta_scraper.py
tests/util/: html_fetcher_for_test.py
